# sagebench_dellgb10

./: .gitignore  README.md  pyproject.toml
config/: README.md  settings.json
docs/: README.md
env_info/: piplist.txt  requirements_smolvlm2_env_dgx_lock.txt
gemma3n/gemma3n_ollama_q4km_10img_20260125_171609/: run_meta.json  runs.jsonl  summary.json
gemma3n/llava_test_20260125_172929/: run_meta.json  runs.jsonl  summary.json
gemma3n/smolvlm2_q8_test_20260125_184018/: run_meta.json  runs.jsonl  summary.json
gemma3n/test_bf16_20260108_231557/: run_meta.json  summary.json
moondream2/moondream2_ollama_500img_20260125_195645/: run_meta.json  runs.jsonl  summary.json
re/: requirements_gemma3n.txt  requirements_internvl.txt  requirements_llava.txt  requirements_moondream.txt  requirements_phi.txt  requirements_smolvlm2.txt
smoke_tests/: test_gemma.py  test_internvl.py  test_moondream.py  test_phi.py  test_smolvlm.py  test_smolvlm2.py  vision_benchmarkv2.py
smolvlm2/smolvlm2_ollama_500img_20260125_201503/: run_meta.json
smolvlm2/smolvlm2_ollama_500img_20260125_202522/: run_meta.json  summary.json
smolvlm2/smolvlm2_q8_test_20260125_192749/: run_meta.json  runs.jsonl  summary.json
src/: __init__.py  example.py
tests/: test_example.py
testsets/: coco_val2017_100.txt  coco_val2017_500.txt
